# pm

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  database.py  db.py  main.py  seed.py
backend/tests/: test_ai.py  test_ai_chat.py  test_auth.py  test_board.py  test_main.py
docs/: DATABASE.md  PLAN.md
frontend/: AGENTS.md  next.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: AuthGate.test.tsx  AuthGate.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  Login.test.tsx  Login.tsx  NewCardForm.tsx
frontend/src/lib/: auth.ts  board.ts  chat.ts
frontend/tests/: kanban.spec.ts
scripts/: start-mac.sh  start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh
